@@ -1,3 +1,9 @@
+2003-06-17  Adam Sampson  <azz@us-lot.org>
+
+	* onenetd.c: Clear O_NONBLOCK after accept(), since Solaris inherits
+	it. Fix copyright notices. Block SIGCHLD except while select() is
+	running. Various cleanups.
+
 2002-12-29  Adam Sampson  <azz@gnu.org>
 
 	* onenetd.c: Made all the errors that can occur in the main loop
